src/pages/ar-ae/v1.10.0/tutorials/zustand.mdx
عنوان: "تتبع تغييرات الحالة مع ملحق Zustand"
MetaTitle: "Zustand"
MetaDescription: "تتبع تغييرات الحالة مع ملحق Zustand"

Zustand هو استبدال سريع وخفيف الحجم لحلول إدارة الحالة مثل Redux. مع ملحق Zustand الخاص بنا، يمكنك الاحتفاظ بتتبع تغييرات الحالة خلال دورة حياة تطبيقك.

## تثبيت الملحق

يمكن تثبيت الملحق بسهولة باستخدام الأمر التالي:

## استخدام الملحق في تطبيق Next.js

لهذا المثال، سنستخدم نفس التطبيق الذي تم عرضه في تعليمات Next.js لمحسننا، لذلك إذا كنت ترغب في الحصول على المزيد من التفاصيل حول المزود السياق الذي يتم استخدامه، فتحقق من ذلك أولا.

**ملاحظة**: يتم تخزين كود المصدر الكامل لهذا المثال في هذا المستودع Github، تحقق منه إذا كنت بحاجة إلى المزيد من التفاصيل.

يتيح المزود السياق الذي يتم استخدامه تكوين الملحقات المحسنة، لذلك بعد تثبيت الملحق، سنقوم بتعديل ملف _app.tsx عن طريق إضافة إعلان الاستيراد أدناه:

وبعد ذلك، يجب أن تبدو وظيفة التطبيق الرئيسية مثل هذا:

هذا سيبدأ تلقائيًا الملحق مع المحسن، وسيجعل أيضًا البيانات التي تم إرجاعها من تنفيذ وظيفة الملحق الرئيسية متاحة.

الشيء التالي هو إنشاء مخزن، وسنبدأ بإضافة منتجات من موقع التجارة الإلكترونية إلى هذا المخزن في اللحظة القادمة.

### إنشاء مخزن مع ملحق Zustand

يتطلب استخدام الملحق تغيير الطريقة التي تستخدمها عادة لإنشاء مخزن Zustand، لذلك لا تتردد في نسخ ولصق الكود التالي كقالب:

سينشئ الوظيفة المصدرة المخزن الأول مرة واحدة فقط، وبعد ذلك سيقوم بإرجاع المخزن الحالي فقط.

من الجانب الآخر، ستنشئ وظيفة createProductStore المخزن، وستضبط المنطق لوظيفة addProduct وتستخدم وظيفة المسجل التي نقدمها لها. هذا المسجل، كما يشبه الذي تخمنه، هو الذي تم استلامه من استخدام ملحق Zustand.

بعد أن يكون المخزن جاهزًا، يمكننا البدء في إضافة المنتجات إليه.

## إضافة المنتجات إلى مخزننا

يصدر المخزن وظيفة addProduct، والتي تقوم بالاحتفاظ بمنتجات العربة.

لاستيراد الوظيفة في الكود الخاص بك، يجب عليك:

1. استيراد واستخدام مزود السياق المحسن.
2. الحصول على سمة pluginsReturnedValue من السياق.
3. استخدامه لاستدعاء وظيفة zustand (لاحظ اسم الوظيفة هو نفس اسم السمة عند تكوين الملحق أعلاه)، وإرسال سمة نصية لإعطاء المخزن اسمًا (سيتم استخدام هذا الاسم أثناء الإعادة).
4. ستقوم وظيفة zustand بإرجاع المسجل الذي سنستخدمه عند استدعاء وظيفة useProductStore من zustand (التي تم إنشاؤها للمخزن).
```jsx
npm i @openreplay/tracker-zustand
```
